# $Id$

2007-01-19	Konstantin V. Arkhipov

	* main/DAOs/Handlers/MessageSegmentHandler.class.php,
	main/DAOs/Workers/DelayedDaoWorker.class.php: sysvmsg-based
	asynchronous DAO-worker, arrived from trunk.

2007-01-12	Nickolay G. Korolyov

	* main/Utils/DaoUtils.class.php: shiny new class introduced.

2007-01-11	Konstantin V. Arkhipov

	* core/DB/ImaginaryDialect.class.php: missing toString added to
	fullTextSearch()/fullTextRank().

2007-01-08	Konstantin V. Arkhipov

	* 0.8.4 released.

2007-01-06	Konstantin V. Arkhipov

	* ext/src/core/DB/ImaginaryDialect.c: segfault's fix backported from
	trunk.

2007-01-03	Konstantin V. Arkhipov

	* ext/src/core/DB/Dialect.c: rare memory corruption fixed, backported
	from trunk.

2006-12-29	Konstantin V. Arkhipov

	* core/Cache/WatermarkedPeer.class.php: fix for possible cache
	corruption backported from trunk.

2006-12-27	Konstantin V. Arkhipov

	* core/Form/PlainForm.class.php, core/Form/Primitives/: clean()
	backported from trunk.

2006-12-26	Konstantin V. Arkhipov

	* meta/patterns/SpookedEnumerationPattern.class.php: arrived from
	trunk.

2006-12-20	Konstantin V. Arkhipov

	* main/Flow/RedirectView.class.php: now skips arrays and objects in
	query string generation.

2006-12-17	Konstantin V. Arkhipov

	* 0.8.3 released.

2006-12-02	Konstantin V. Arkhipov

	* meta/types/SmallIntegerType.class.php: arrived from trunk.

2006-11-25	Igor V. Gulyaev

	* meta/builders/BaseBuilder.class.php: do not generate getTable,
	getObjectName, getSequence for abstract DAO's.

2006-11-12	Konstantin V. Arkhipov

	* 0.8.2 released.

2006-11-11	Konstantin V. Arkhipov

	* doc/project.skel/: synced with current onPHP's state.

2006-11-10	Konstantin V. Arkhipov

	* meta/: return type-hints are now generated for every class.

2006-11-09	Konstantin V. Arkhipov

	* meta/types/: float type corrected, double type added.

2006-11-06	Konstantin V. Arkhipov

	* main/Mail/MimePart.class.php: strange typo in quoted encoding fixed.
